新增仪表盘功能，包含仪表盘控制器、服务和数据模型，支持获取仪表盘数据和最近动态列表。更新前端API以集成仪表盘功能，优化用户体验。移除不再需要的文件和数据库迁移脚本，提升代码整洁性。